tests/dfrouter/errors/detector_flow_files/false_detectors_flows_file2/options.dfrouter
--net-file=input_tri.net.xml --detector-files=input_tri.det.xml --detector-output detectors_def.det.xml  --measure-files xxx.txt,input_flows.txt

